--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,20 +14,7 @@ jobs:
         uses: actions/setup-node@v1.4.3
         with:
           node-version: 12.x
-      
-      # Cache Yarn
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - uses: actions/cache@v2
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-    
+       
       - name: Install dependencies
         run: yarn
     
@@ -53,24 +40,6 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: | 
             cd ~/app/gobarber-node-deploy
-            yarn
-            
-      - name: Run migrations on digital ocean
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          port: ${{ secrets.SSH_PORT }}
-          key: ${{ secrets.SSH_KEY }}
-          script: | 
-            cd ~/app/gobarber-node-deploy
+            yarn            
             ./node_modules/.bin/typeorm migration:run
-            
-      - name: Restart Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          port: ${{ secrets.SSH_PORT }}
-          key: ${{ secrets.SSH_KEY }}
-          script: pm2 restart gobarber-api
+            pm2 restart gobarber-api
